# bsky-motd

./: Cargo.toml  README.md
src/: main.rs
