[package]
name = "bsky-motd"
authors = ["Blooym"]
description = "Get a message of the day in your terminal from a specified Bluesky list."
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
anyhow = "1.0.96"
bsky-sdk = "0.1.16"
clap = { version = "4.5.30", features = ["derive", "env"] }
dirs = "6.0.0"
ipld-core = "0.4.2"
rand = "0.9.0"
tokio = { version = "1.43.0", features = ["macros", "rt"] }
url = "2.5.4"
